Add p for branch1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div>
         <h1>This is my First local git repo</h1>
+        <p>Im on branch1</p>
+        <p>can you full me on main branch</p>
     </div>
-   
 </body>
 </html>
